<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/deskclock_action_bar_height"
    android:paddingHorizontal="@dimen/deskclock_screen_padding"
    android:paddingTop="@dimen/deskclock_title_top_padding"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/titleAlarm"
        style="@style/DeskClockHeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/alarm_title"
        app:layout_constraintBottom_toTopOf="@+id/subtitleAlarm"
        app:layout_constraintEnd_toStartOf="@+id/btnMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleAlarm"
        style="@style/DeskClockLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/alarm_next_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/btnMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleAlarm" />

    <ImageButton
        android:id="@+id/btnMore"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/nav_item_background"
        android:contentDescription="@string/overflow_menu"
        android:padding="10dp"
        android:tint="@color/deskclock_on_surface"
        app:layout_constraintBottom_toBottomOf="@id/titleAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert" />

</androidx.constraintlayout.widget.ConstraintLayout>
