<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deskclock_background"
    android:paddingHorizontal="@dimen/deskclock_screen_padding"
    android:paddingTop="@dimen/deskclock_title_top_padding">

    <TextView
        style="@style/DeskClockHeadline"
        android:id="@+id/titleWorld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/world_clock_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnWorldMore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_ripple_button"
        android:contentDescription="@string/overflow_menu"
        android:padding="10dp"
        android:tint="@color/deskclock_on_surface_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert" />

    <ImageButton
        android:id="@+id/btnWorldAdd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_ripple_button"
        android:contentDescription="@string/add_alarm_title"
        android:padding="10dp"
        android:tint="@color/deskclock_on_surface_secondary"
        app:layout_constraintEnd_toStartOf="@id/btnWorldMore"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        android:dial="@drawable/clock_dial"
        android:hand_hour="@drawable/clock_hand_hour"
        android:hand_minute="@drawable/clock_hand_minute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleWorld" />

    <TextView
        android:id="@+id/textLocalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="04:06:26"
        android:textColor="@color/deskclock_on_surface"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/analogClock" />

    <TextView
        android:id="@+id/textLocalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/world_clock_local"
        android:textColor="@color/deskclock_on_surface_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLocalTime" />

    <TextView
        android:id="@+id/textEmptyWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/world_clock_empty"
        android:textColor="@color/deskclock_on_surface_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLocalLabel" />

    <include
        layout="@layout/include_bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
